--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Balena CLI install
         run: |
           wget -O balenacli.zip https://github.com/balena-io/balena-cli/releases/download/v13.6.1/balena-cli-v13.6.1-linux-x64-standalone.zip
-          unzip balenacli.zip ./
+          unzip -j balenacli.zip
           ./balena login --token ${{secrets.BALENA_API_TOKEN}}
 
       # Runs a set of commands using the runners shell
