--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,6 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-node
 
 WORKDIR /usr/src/app
 
+RUN apt install -y git
 RUN apt-get install -y git
 
 RUN git clone https://github.com/tngoman/Store-POS/blob/master/package.json ./
