--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,8 +1,6 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-ubuntu
+FROM balenalib/%%BALENA_MACHINE_NAME%%-ubuntu:latest
 
 WORKDIR /usr/src/app
-
-RUN apt-get install -y git
 
 RUN git clone https://github.com/tngoman/Store-POS/blob/master/package.json ./
 RUN npm install
