--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,6 +2,8 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-ubuntu:latest
 
 WORKDIR /usr/src/app
 
+RUN apt
+
 RUN git clone https://github.com/tngoman/Store-POS/blob/master/package.json ./
 RUN npm install
 COPY . ./
