--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-ubuntu:latest
 
 WORKDIR /usr/src/app
 
-RUN apt
+RUN apt-get update && apt-get install -y git
 
 RUN git clone https://github.com/tngoman/Store-POS/blob/master/package.json ./
 RUN npm install
