Fixed repository to be cloned to the correct url

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -4,7 +4,7 @@ WORKDIR /usr/src/app
 
 RUN apt-get update && apt-get install -y git
 
-RUN git clone https://github.com/tngoman/Store-POS/blob/master/package.json ./
+RUN git clone https://github.com/tngoman/Store-POS ./
 RUN npm install
 COPY . ./
 
