--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,8 +6,8 @@ RUN apt-get update && apt-get install -y git nodejs npm
 
 RUN git clone https://github.com/tngoman/Store-POS ./
 RUN npm install
-COPY . ./
+COPY . .
 
-ENV UDEV=1
+# ENV UDEV=1
 
 CMD start.sh
