--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,10 +5,10 @@ WORKDIR /usr/src/app
 RUN apt-get update && apt-get install -y git nodejs npm
 
 RUN git clone https://github.com/tngoman/Store-POS ./
-RUN rm package.json package-lock.json
+RUN rm package.json
 COPY . ./
 RUN npm install
-RUN npx electron-builder
+RUN npx electron-builder -l build
 RUN chmod +x dist/linux-unpacked/pos
 RUN cat start.sh && chmod +x start.sh
 # ENV UDEV=1
