--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "POS",
+    "name": "pos",
     "version": "0.1.0",
     "description": "Store Point of Sale is a desktop application developed by Hosting Domain and available for free download at www.storepointofsale.com.",
     "author": "Hosting Domain",
@@ -17,10 +17,8 @@
       "btoa": "^1.2.1",
       "electron-context-menu": "^0.15.1",
       "electron-store": "^5.1.0",
-      "electron-winstaller": "^4.0.0",
       "express": "^4.16.2",
       "express-fileupload": "^1.1.6",
-      "fs": "^0.0.1-security",
       "html2canvas": "^1.0.0-rc.5",
       "http": "0.0.0",
       "https": "^1.0.0",
