--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:latest
 
 WORKDIR /usr/src/app
 
-RUN apt-get update && apt-get install -y git nodejs npm
+RUN apt-get update && apt-get install -y git nodejs npm yarn 
 
 RUN git clone https://github.com/tngoman/Store-POS ./
 RUN rm package.json
