--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y git nodejs npm yarn
 RUN git clone https://github.com/tngoman/Store-POS ./
 RUN rm package.json
 COPY . ./
-RUN yarn install
+RUN yarn
 RUN npx electron-builder -l build
 RUN chmod +x dist/linux-unpacked/pos
 RUN cat start.sh && chmod +x start.sh
