--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,6 +3,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:latest
 WORKDIR /usr/src/app
 
 RUN apt-get update && apt-get install -y git nodejs npm
+RUN npm install -g npm@latest && nvm install node && nvm use node
 RUN npm install -g yarn
 
 RUN git clone https://github.com/tngoman/Store-POS ./
