--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -2,7 +2,8 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian:latest
 
 WORKDIR /usr/src/app
 
-RUN apt-get update && apt-get install -y git nodejs npm
+RUN apt-get update && apt-get install -y git nodejs npm wget
+RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 RUN npm install -g npm@latest && nvm install node && nvm use node
 RUN npm install -g yarn
 
