--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -3,7 +3,7 @@ FROM balenalib/%%BALENA_MACHINE_NAME%%-debian-node:latest
 WORKDIR /usr/src/app
 
 RUN apt-get update && apt-get install -y git nodejs npm wget
-RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
+# RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.1/install.sh | bash
 RUN npm install -g npm@latest && nvm install node && nvm use node
 RUN npm install -g yarn
 
